# tropicana_ws

./: .gitignore  .gitmodules  README.md  rs_point_dynamic_cfg.yaml
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/include/open_manipulator_msgs/: GetJointPosition.h  GetJointPositionRequest.h  GetJointPositionResponse.h  GetKinematicsPose.h  GetKinematicsPoseRequest.h  GetKinematicsPoseResponse.h  JointPosition.h  KinematicsPose.h  OpenManipulatorState.h  SetActuatorState.h  SetActuatorStateRequest.h  SetActuatorStateResponse.h  SetDrawingTrajectory.h  SetDrawingTrajectoryRequest.h  SetDrawingTrajectoryResponse.h  SetJointPosition.h  SetJointPositionRequest.h  SetJointPositionResponse.h  SetKinematicsPose.h  SetKinematicsPoseRequest.h  SetKinematicsPoseResponse.h
install/include/vision_msgs/: BoundingBox2D.h  BoundingBox2DArray.h  BoundingBox3D.h  BoundingBox3DArray.h  Classification2D.h  Classification3D.h  Detection2D.h  Detection2DArray.h  Detection3D.h  Detection3DArray.h  ObjectHypothesis.h  ObjectHypothesisWithPose.h  VisionInfo.h
install/lib/darknet_ros/: darknet_ros
install/lib/open_manipulator_control_gui/: open_manipulator_control_gui
install/lib/open_manipulator_controller/: open_manipulator_controller
install/lib/open_manipulator_gazebo/: gripper_sub_publisher
install/lib/open_manipulator_teleop/: open_manipulator_teleop_joystick  open_manipulator_teleop_keyboard
install/lib/pkgconfig/: camera_publisher.pc  darknet_ros.pc  darknet_ros_msgs.pc  detection-3d-ros.pc  open_manipulator_control_gui.pc  open_manipulator_controller.pc  open_manipulator_description.pc  open_manipulator_gazebo.pc  open_manipulator_libs.pc  open_manipulator_moveit.pc  open_manipulator_msgs.pc  open_manipulator_teleop.pc  realsense2_camera.pc  realsense2_description.pc  roboticsgroup_gazebo_plugins.pc  robotis_manipulator.pc  tropicana_test.pc  vision_msgs.pc
install/share/camera_publisher/: package.xml
install/share/camera_publisher/cmake/: camera_publisherConfig.cmake
install/share/darknet_ros/: package.xml
install/share/darknet_ros/cmake/: darknet_rosConfig.cmake
install/share/darknet_ros/config/: yolov4-tiny_apple.yaml  yolov4_apple.yaml
install/share/darknet_ros/launch/: darknet_ros.launch
install/share/darknet_ros_msgs/cmake/: darknet_ros_msgsConfig.cmake
install/share/detection-3d-ros/: package.xml
install/share/detection-3d-ros/cmake/: detection-3d-rosConfig.cmake
install/share/open_manipulator_control_gui/cmake/: open_manipulator_control_guiConfig.cmake
install/share/open_manipulator_controller/: package.xml
install/share/open_manipulator_description/: package.xml
install/share/open_manipulator_libs/: package.xml
src/point_visualization/: package.xml
src/point_visualization/src/: point_visualization.cpp
src/robotis/open_manipulator/: README.md
src/rqt_dyros_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_dyros_gui/include/rqt_dyros_gui/: rqt_dyros_gui.h
src/rqt_dyros_gui/scripts/: rqt_dyros_gui
src/rqt_dyros_gui/src/: rqt_dyros_gui.cpp  rqt_dyros_gui.ui
src/template_gui_package/nodes/: tropicana_gui_node.cpp
src/template_gui_package/src/: tropicana_gui.cpp
src/tropicana/point_visualization/: CMakeLists.txt
src/tropicana/point_visualization/src/: point_visualization.cpp
src/tropicana/tropicana_test/: CMakeLists.txt
src/tropicana/tropicana_test/include/: tropicana_test.h
src/tropicana_packages/target_visualize/: CMakeLists.txt  package.xml
src/tropicana_packages/target_visualize/include/: target_visualize.h
src/tropicana_packages/target_visualize/launch/: target_visualize_rviz.launch
src/tropicana_packages/target_visualize/src/: target_visualize.cpp
src/tropicana_packages/tropicana_activate/: CMakeLists.txt  package.xml
src/tropicana_test/: package.xml
src/tropicana_test/include/: tropicana_test.h
src/tropicana_test/src/: tropicana_test.cpp
(+103 files in other folders)
