<?xml version="1.0"?>
<package format="2">
  <name>detection-3d-ros</name>
  <version>0.0.0</version>
  <description>detection-3d-ros package</description>

  <maintainer email="ssh199898@todo.todo">ssh199898</maintainer>
  <license>MIT</license>


  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>darknet_ros_msgs</depend>

  <build_depend>message_generation</build_depend>

  <!-- <exec_depend></exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
